--- a/x-pack/elastic-agent/.gitignore
+++ b/x-pack/elastic-agent/.gitignore
@@ -1,6 +1,7 @@
 # agent
 build/
 elastic-agent.dev.yml
+elastic-agent.log*
 pkg/agent/operation/tests/scripts/short--1.0.yml
 pkg/agent/operation/tests/scripts/configurable-1.0-darwin-x86/configurable
 pkg/agent/application/fleet.yml
